// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layouts RandomNotes snapshots contain data content when requesting result is not empty in desktop 1`] = `
<ul
  class="MuiImageList-root MuiImageList-standard WhiteRandomNotes-imageList css-rvv586-MuiImageList-root"
  style="grid-template-columns: repeat(4, 1fr); gap: 20px;"
>
  <li
    class="MuiImageListItem-root MuiImageListItem-standard WhiteRandomNotes-imageListItem css-ta95xa-MuiImageListItem-root"
    style="height: 250px; grid-column-end: span 1; grid-row-end: span 1;"
  >
    <img
      alt="title"
      class="MuiImageListItem-img WhiteRandomNotes-img"
      loading="lazy"
      src="image"
    />
    <div
      class="MuiImageListItemBar-root MuiImageListItemBar-positionBottom WhiteRandomNotes-imageListItemBar css-ztrqiq-MuiImageListItemBar-root"
    >
      <div
        class="MuiImageListItemBar-titleWrap MuiImageListItemBar-titleWrapBottom css-1lizpae-MuiImageListItemBar-titleWrap"
      >
        <div
          class="MuiImageListItemBar-title css-dasnyc-MuiImageListItemBar-title"
        >
          title
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`layouts RandomNotes snapshots contain data content when requesting result is not empty in mobile 1`] = `
<ul
  class="MuiImageList-root MuiImageList-standard WhiteRandomNotes-imageList css-rvv586-MuiImageList-root"
  style="grid-template-columns: repeat(1, 1fr); gap: 20px;"
>
  <li
    class="MuiImageListItem-root MuiImageListItem-standard WhiteRandomNotes-imageListItem css-ta95xa-MuiImageListItem-root"
    style="height: 250px; grid-column-end: span 1; grid-row-end: span 1;"
  >
    <img
      alt="title"
      class="MuiImageListItem-img WhiteRandomNotes-img"
      loading="lazy"
      src="image"
    />
    <div
      class="MuiImageListItemBar-root MuiImageListItemBar-positionBottom WhiteRandomNotes-imageListItemBar css-ztrqiq-MuiImageListItemBar-root"
    >
      <div
        class="MuiImageListItemBar-titleWrap MuiImageListItemBar-titleWrapBottom css-1lizpae-MuiImageListItemBar-titleWrap"
      >
        <div
          class="MuiImageListItemBar-title css-dasnyc-MuiImageListItemBar-title"
        >
          title
        </div>
      </div>
    </div>
  </li>
</ul>
`;
